--- a/web/shop.html
+++ b/web/shop.html
@@ -71,7 +71,63 @@
             </div>
         </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <div class="contentLeft">
+            <div class="ping">
+                <a href="" class="pingPic">
+                    <img src="img/s-2.png" alt="">
+                </a>
+                <a href="" class="pingWord">昆凌伞</a>
+            </div>
+            <div class="ping">
+                <a href="" class="pingPic">
+                    <img src="img/s-3.png" alt="">
+                </a>
+                <a href="" class="pingWord">武功秘籍</a>
+            </div>
+            <div class="ping">
+                <a href="" class="pingPic">
+                    <img src="img/s-4.png" alt="">
+                </a>
+                <a href="" class="pingWord">起死回生水</a>
+            </div>
+            <div class="ping">
+                <a href="" class="pingPic">
+                    <img src="img/s-6.png" alt="">
+                </a>
+                <a href="" class="pingWord">乾坤袋</a>
+            </div>
+        </div>
+        <div class="contentRight">
+            <div class="ping">
+                <a href="" class="pingPic">
+                    <img src="img/s-1.png" alt="">
+                </a>
+                <a href="" class="pingWord">疗伤粉</a>
+            </div>
+            <div class="ping">
+                <a href="" class="pingPic">
+                    <img src="img/s-2.png" alt="">
+                </a>
+                <a href="" class="pingWord">昆凌伞</a>
+            </div>
+            <div class="ping">
+                <a href="" class="pingPic">
+                    <img src="img/s-3.png" alt="">
+                </a>
+                <a href="" class="pingWord">葵花宝典</a>
+            </div>
+            <div class="ping">
+                <a href="" class="pingPic">
+                    <img src="img/s-4.png" alt="">
+                </a>
+                <a href="" class="pingWord">忘情水</a>
+            </div>
+        </div>
+        <div class="return">
+            <a href="skill.html">返回</a>
+        </div>
+    </div>
 </div>
 
 
