--- a/web/regester.html
+++ b/web/regester.html
@@ -10,6 +10,7 @@
     <div class="re">
         <div class="regest">
             <p>注册</p>
+            <form action="RegisterLogin" method="post" name="form_register">
             <div class="userName" >
                 <span>用户名：</span>
                 <input type="text" placeholder="请输入用户名" id="username">
@@ -22,6 +23,7 @@
                 <span>确认密码：</span>
                 <input type="text" placeholder="请输入登录密码" id="repassword">
             </div>
+            </form>
             <button type="button" onclick="register_submit()">注册</button>
             <button type="button">登录</button>
         </div>
